java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting/IDEADEV9201.java
class YouAreNotMyType {

    String[][] oldLady() {
        return  new String[][]{new <error descr="Incompatible types. Found: 'java.lang.Integer[]', required: 'java.lang.String[]'">Integer</error>[]{}};
    }
}